--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "*",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "serpapi/google-search-results-php": "^1.2",
+        "ext-json": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
